Task_2_4_1/src/main/java/ru/nsu/kolodina/ooptasks/generated/CourseDSLParser.java
// Generated from CourseDSL.g4 by ANTLR 4.13.1

package ru.nsu.kolodina.ooptasks;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CourseDSLParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, STRING = 29, INT = 30, WS = 31, COMMENTARY = 32;
    public static final int
            RULE_program = 0, RULE_importStmt = 1, RULE_statement = 2, RULE_taskBlock = 3,
            RULE_taskDecl = 4, RULE_taskBody = 5, RULE_groupBlock = 6, RULE_groupDecl = 7,
            RULE_studentDecl = 8, RULE_studentBody = 9, RULE_projectDecl = 10, RULE_assignmentBlock = 11,
            RULE_assignmentDecl = 12, RULE_assignedTask = 13, RULE_bonusStmt = 14,
            RULE_checkpointBlock = 15, RULE_checkpointDecl = 16, RULE_buildSystemDecl = 17,
            RULE_criteriesDecl = 18, RULE_gradingDecl = 19;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public CourseDSLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "importStmt", "statement", "taskBlock", "taskDecl", "taskBody",
                "groupBlock", "groupDecl", "studentDecl", "studentBody", "projectDecl",
                "assignmentBlock", "assignmentDecl", "assignedTask", "bonusStmt", "checkpointBlock",
                "checkpointDecl", "buildSystemDecl", "criteriesDecl", "gradingDecl"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'import'", "'tasks'", "'{'", "'}'", "'task id'", "'name'", "'maxScore'",
                "'bonusScore'", "'softDeadline'", "'hardDeadline'", "'groups'", "'group'",
                "'student'", "'NickName'", "'repository'", "'buildtool'", "'assignments'",
                "'task'", "'bonus'", "'for'", "'+'", "'checkpoints'", "'checkpoint'",
                "'date'", "'score'", "'buildTool'", "'criteries'", "'grading'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, "STRING", "INT", "WS", "COMMENTARY"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "CourseDSL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 474613766L) != 0)) {
                    {
                        setState(42);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(40);
                                importStmt();
                            }
                            break;
                            case 2: {
                                setState(41);
                                statement();
                            }
                            break;
                        }
                    }
                    setState(46);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(47);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImportStmtContext importStmt() throws RecognitionException {
        ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_importStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(49);
                match(T__0);
                setState(50);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_statement);
        try {
            setState(61);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(52);
                    importStmt();
                }
                break;
                case T__1:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(53);
                    taskBlock();
                }
                break;
                case T__10:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(54);
                    groupBlock();
                }
                break;
                case T__16:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(55);
                    assignmentBlock();
                }
                break;
                case T__18:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(56);
                    bonusStmt();
                }
                break;
                case T__21:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(57);
                    checkpointBlock();
                }
                break;
                case T__27:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(58);
                    gradingDecl();
                }
                break;
                case T__25:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(59);
                    buildSystemDecl();
                }
                break;
                case T__26:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(60);
                    criteriesDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TaskBlockContext taskBlock() throws RecognitionException {
        TaskBlockContext _localctx = new TaskBlockContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_taskBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                match(T__1);
                setState(64);
                match(T__2);
                setState(68);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__4) {
                    {
                        {
                            setState(65);
                            taskDecl();
                        }
                    }
                    setState(70);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(71);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TaskDeclContext taskDecl() throws RecognitionException {
        TaskDeclContext _localctx = new TaskDeclContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_taskDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(73);
                match(T__4);
                setState(74);
                match(STRING);
                setState(75);
                match(T__5);
                setState(76);
                match(STRING);
                setState(77);
                match(T__2);
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(78);
                            taskBody();
                        }
                    }
                    setState(81);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1920L) != 0));
                setState(83);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TaskBodyContext taskBody() throws RecognitionException {
        TaskBodyContext _localctx = new TaskBodyContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_taskBody);
        try {
            setState(93);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__6:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(85);
                    match(T__6);
                    setState(86);
                    match(STRING);
                }
                break;
                case T__7:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(87);
                    match(T__7);
                    setState(88);
                    match(STRING);
                }
                break;
                case T__8:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(89);
                    match(T__8);
                    setState(90);
                    match(STRING);
                }
                break;
                case T__9:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(91);
                    match(T__9);
                    setState(92);
                    match(STRING);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GroupBlockContext groupBlock() throws RecognitionException {
        GroupBlockContext _localctx = new GroupBlockContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_groupBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(95);
                match(T__10);
                setState(96);
                match(T__2);
                setState(100);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__11) {
                    {
                        {
                            setState(97);
                            groupDecl();
                        }
                    }
                    setState(102);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(103);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GroupDeclContext groupDecl() throws RecognitionException {
        GroupDeclContext _localctx = new GroupDeclContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_groupDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(T__11);
                setState(106);
                match(STRING);
                setState(107);
                match(T__2);
                setState(109);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(108);
                            studentDecl();
                        }
                    }
                    setState(111);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__12);
                setState(113);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StudentDeclContext studentDecl() throws RecognitionException {
        StudentDeclContext _localctx = new StudentDeclContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_studentDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                match(T__12);
                setState(116);
                match(T__2);
                setState(118);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(117);
                            studentBody();
                        }
                    }
                    setState(120);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 114752L) != 0));
                setState(122);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StudentBodyContext studentBody() throws RecognitionException {
        StudentBodyContext _localctx = new StudentBodyContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_studentBody);
        try {
            setState(132);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__5:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(124);
                    match(T__5);
                    setState(125);
                    match(STRING);
                }
                break;
                case T__13:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(126);
                    match(T__13);
                    setState(127);
                    match(STRING);
                }
                break;
                case T__14:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(128);
                    match(T__14);
                    setState(129);
                    match(STRING);
                }
                break;
                case T__15:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(130);
                    match(T__15);
                    setState(131);
                    match(STRING);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProjectDeclContext projectDecl() throws RecognitionException {
        ProjectDeclContext _localctx = new ProjectDeclContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_projectDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(134);
                match(T__2);
                setState(135);
                taskDecl();
                setState(136);
                match(T__3);
                setState(137);
                match(T__2);
                setState(138);
                studentDecl();
                setState(139);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentBlockContext assignmentBlock() throws RecognitionException {
        AssignmentBlockContext _localctx = new AssignmentBlockContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_assignmentBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(T__16);
                setState(142);
                match(T__2);
                setState(146);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__12) {
                    {
                        {
                            setState(143);
                            assignmentDecl();
                        }
                    }
                    setState(148);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(149);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentDeclContext assignmentDecl() throws RecognitionException {
        AssignmentDeclContext _localctx = new AssignmentDeclContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_assignmentDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(151);
                match(T__12);
                setState(152);
                match(STRING);
                setState(153);
                match(T__2);
                setState(155);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(154);
                            assignedTask();
                        }
                    }
                    setState(157);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__17);
                setState(159);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignedTaskContext assignedTask() throws RecognitionException {
        AssignedTaskContext _localctx = new AssignedTaskContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_assignedTask);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(161);
                match(T__17);
                setState(162);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BonusStmtContext bonusStmt() throws RecognitionException {
        BonusStmtContext _localctx = new BonusStmtContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_bonusStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(164);
                match(T__18);
                setState(165);
                match(STRING);
                setState(166);
                match(T__19);
                setState(167);
                match(STRING);
                setState(168);
                match(T__20);
                setState(169);
                match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CheckpointBlockContext checkpointBlock() throws RecognitionException {
        CheckpointBlockContext _localctx = new CheckpointBlockContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_checkpointBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                match(T__21);
                setState(172);
                match(T__2);
                setState(176);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__22) {
                    {
                        {
                            setState(173);
                            checkpointDecl();
                        }
                    }
                    setState(178);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(179);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CheckpointDeclContext checkpointDecl() throws RecognitionException {
        CheckpointDeclContext _localctx = new CheckpointDeclContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_checkpointDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(181);
                match(T__22);
                setState(182);
                match(STRING);
                setState(183);
                match(T__2);
                setState(184);
                match(T__23);
                setState(185);
                match(STRING);
                setState(186);
                match(T__24);
                setState(187);
                match(STRING);
                setState(188);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BuildSystemDeclContext buildSystemDecl() throws RecognitionException {
        BuildSystemDeclContext _localctx = new BuildSystemDeclContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_buildSystemDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                match(T__25);
                setState(191);
                match(STRING);
                setState(192);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CriteriesDeclContext criteriesDecl() throws RecognitionException {
        CriteriesDeclContext _localctx = new CriteriesDeclContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_criteriesDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                match(T__26);
                setState(195);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GradingDeclContext gradingDecl() throws RecognitionException {
        GradingDeclContext _localctx = new GradingDeclContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_gradingDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(197);
                match(T__27);
                setState(198);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode EOF() {
            return getToken(CourseDSLParser.EOF, 0);
        }

        public List<ImportStmtContext> importStmt() {
            return getRuleContexts(ImportStmtContext.class);
        }

        public ImportStmtContext importStmt(int i) {
            return getRuleContext(ImportStmtContext.class, i);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ImportStmtContext extends ParserRuleContext {
        public ImportStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode STRING() {
            return getToken(CourseDSLParser.STRING, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_importStmt;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitImportStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ImportStmtContext importStmt() {
            return getRuleContext(ImportStmtContext.class, 0);
        }

        public TaskBlockContext taskBlock() {
            return getRuleContext(TaskBlockContext.class, 0);
        }

        public GroupBlockContext groupBlock() {
            return getRuleContext(GroupBlockContext.class, 0);
        }

        public AssignmentBlockContext assignmentBlock() {
            return getRuleContext(AssignmentBlockContext.class, 0);
        }

        public BonusStmtContext bonusStmt() {
            return getRuleContext(BonusStmtContext.class, 0);
        }

        public CheckpointBlockContext checkpointBlock() {
            return getRuleContext(CheckpointBlockContext.class, 0);
        }

        public GradingDeclContext gradingDecl() {
            return getRuleContext(GradingDeclContext.class, 0);
        }

        public BuildSystemDeclContext buildSystemDecl() {
            return getRuleContext(BuildSystemDeclContext.class, 0);
        }

        public CriteriesDeclContext criteriesDecl() {
            return getRuleContext(CriteriesDeclContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TaskBlockContext extends ParserRuleContext {
        public TaskBlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TaskDeclContext> taskDecl() {
            return getRuleContexts(TaskDeclContext.class);
        }

        public TaskDeclContext taskDecl(int i) {
            return getRuleContext(TaskDeclContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_taskBlock;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitTaskBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TaskDeclContext extends ParserRuleContext {
        public TaskDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TerminalNode> STRING() {
            return getTokens(CourseDSLParser.STRING);
        }

        public TerminalNode STRING(int i) {
            return getToken(CourseDSLParser.STRING, i);
        }

        public List<TaskBodyContext> taskBody() {
            return getRuleContexts(TaskBodyContext.class);
        }

        public TaskBodyContext taskBody(int i) {
            return getRuleContext(TaskBodyContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_taskDecl;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitTaskDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TaskBodyContext extends ParserRuleContext {
        public TaskBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode STRING() {
            return getToken(CourseDSLParser.STRING, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_taskBody;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitTaskBody(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class GroupBlockContext extends ParserRuleContext {
        public GroupBlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<GroupDeclContext> groupDecl() {
            return getRuleContexts(GroupDeclContext.class);
        }

        public GroupDeclContext groupDecl(int i) {
            return getRuleContext(GroupDeclContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_groupBlock;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitGroupBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class GroupDeclContext extends ParserRuleContext {
        public GroupDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode STRING() {
            return getToken(CourseDSLParser.STRING, 0);
        }

        public List<StudentDeclContext> studentDecl() {
            return getRuleContexts(StudentDeclContext.class);
        }

        public StudentDeclContext studentDecl(int i) {
            return getRuleContext(StudentDeclContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_groupDecl;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitGroupDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StudentDeclContext extends ParserRuleContext {
        public StudentDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<StudentBodyContext> studentBody() {
            return getRuleContexts(StudentBodyContext.class);
        }

        public StudentBodyContext studentBody(int i) {
            return getRuleContext(StudentBodyContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_studentDecl;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitStudentDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StudentBodyContext extends ParserRuleContext {
        public StudentBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode STRING() {
            return getToken(CourseDSLParser.STRING, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_studentBody;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitStudentBody(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProjectDeclContext extends ParserRuleContext {
        public ProjectDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TaskDeclContext taskDecl() {
            return getRuleContext(TaskDeclContext.class, 0);
        }

        public StudentDeclContext studentDecl() {
            return getRuleContext(StudentDeclContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_projectDecl;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CourseDSLVisitor)
                return ((CourseDSLVisitor<? extends T>) visitor).visitProjectDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
